fix button alignment

--- a/simpleApp/src/app/components/widget/widget.component.css
+++ b/simpleApp/src/app/components/widget/widget.component.css
@@ -11,6 +11,7 @@
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
     font-weight: 300;
 }
 .header-title {
